devops/aws/ecs_fargate_module/modules/network/main.tf
# Fetch AZs in the current region
# data "aws_availability_zones" "available" {
# }

################################################################################
# VPC Definition
################################################################################
resource "aws_vpc" "main" {
  cidr_block           = var.cidr_block
  enable_dns_support   = var.enable_dns_support
  enable_dns_hostnames = var.enable_dns_hostnames
  tags = {
    Name        = "${var.project}_${var.environment}_vpc"
    Environment = var.environment
  }
}

################################################################################
# IG Definition
################################################################################
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name        = "${var.project}_${var.environment}_ig"
    Environment = var.environment
  }
}

################################################################################
# Private Subnets Definition
################################################################################
# Create length(var.availability_zones) private subnets, each in a different AZ
resource "aws_subnet" "private" {
  count             = length(var.private_subnet_cidrs)
  cidr_block        = element(var.private_subnet_cidrs, count.index)
  availability_zone = element(var.availability_zones, count.index)
  vpc_id            = aws_vpc.main.id
  tags = {
    Name        = "${var.project}_${var.environment}_private_subnet"
    Environment = var.environment
  }
}

################################################################################
# Public Subnets Definition
################################################################################
# Create length(var.availability_zones) public subnets, each in a different AZ
resource "aws_subnet" "public" {
  count                   = length(var.public_subnet_cidrs)
  cidr_block              = element(var.public_subnet_cidrs, count.index)
  availability_zone       = element(var.availability_zones, count.index)
  vpc_id                  = aws_vpc.main.id
  map_public_ip_on_launch = true
  tags = {
    Name        = "${var.project}_${var.environment}_public_subnet"
    Environment = var.environment
  }
}

################################################################################
# Public RT Definition
################################################################################
# Route the public subnet traffic through the IGW
resource "aws_route" "internet_access" {
  route_table_id         = aws_vpc.main.main_route_table_id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.gw.id
}

################################################################################
# NAT Definition
################################################################################
# Create a NAT gateway with an Elastic IP for each private subnet to get internet connectivity
resource "aws_eip" "gw" {
  count      = length(var.availability_zones)
  vpc        = true
  depends_on = [aws_internet_gateway.gw]
}

resource "aws_nat_gateway" "gw" {
  count         = length(var.availability_zones)
  subnet_id     = element(aws_subnet.public.*.id, count.index)
  allocation_id = element(aws_eip.gw.*.id, count.index)
}

################################################################################
# Private RT Definition
################################################################################
# Create a new route table for the private subnets, make it route non-local traffic through the NAT gateway to the internet
resource "aws_route_table" "private" {
  count  = length(var.availability_zones)
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = element(aws_nat_gateway.gw.*.id, count.index)
  }
}

# Explicitly associate the newly created route tables to the private subnets (so they don't default to the main route table)
resource "aws_route_table_association" "private" {
  count          = length(var.availability_zones)
  subnet_id      = element(aws_subnet.private.*.id, count.index)
  route_table_id = element(aws_route_table.private.*.id, count.index)
}
